ryan_mall/deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ryan-mall
  labels:
    name: ryan-mall
    environment: production
